# mcp-showcases

./: LICENSE  README.md  download.py  pyproject.toml  run-mcp-1.sh  run-mcp-2.sh  run-mcp-3.sh
data/: real_crypto_2024.csv
