[project]
name = "mcp-showcases"
version = "0.1.0"
description = "A collection of Model Context Protocol (MCP) tools for high-value workflows."
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "mcp>=1.25.0",
    "yfinance>=1.0",
    "tabulate>=0.9.0",
    "pandas-analyst @ file:///${PROJECT_ROOT}/packages/pandas-analyst",
    "solana-inspector @ file:///${PROJECT_ROOT}/packages/solana-inspector",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
